add expected results cards

--- a/content/projects/esg/objectives.yml
+++ b/content/projects/esg/objectives.yml
@@ -1,3 +1,5 @@
+heading: Objectives
+
 objectives:
 - title: Objective 1
   content: Accessible e-Infrastructure resources for European scientists to enable pioneering data-driven research across scientific domains.
