typo and text tweaks

--- a/content/projects/esg/work_packages.yml
+++ b/content/projects/esg/work_packages.yml
@@ -2,24 +2,24 @@ title: "Work Packages"
 
 summary:
   title: "Work Packages"
-  content: "EuroScienceGateway is organzied into multiple work packages, each with it's own focus."
+  content: "EuroScienceGateway is organized into multiple work packages, each with it's own focus."
 
 wp1:
   title: "Work Package 1"
-  content: "Project Management, Coordination and Dissemination"
+  content: "Project Management, Coordination and Dissemination."
 
 wp2:
   title: "Work Package 2"
-  content: "Stimulate FAIR and reusable research"
+  content: "Stimulate FAIR and reusable research."
 
 wp3:
   title: "Work Package 3"
-  content: "Pulsar Network: Distributed heterogeneous compute"
+  content: "Pulsar Network: Distributed heterogeneous compute."
 
 wp4:
   title: "Work Package 4"
-  content: "Building blocks for a sustainable operating model"
+  content: "Building blocks for a sustainable operating model."
 
 wp5:
   title: "Work Package 5"
-  content: "Community engagement, adoption and onboarding"
+  content: "Community engagement, adoption and onboarding."
