--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ics": "^2.35.0",
     "jiti": "^1.12.0",
     "lodash": "^4.17.21",
+    "magic-snowflakes": "^6.1.0",
     "markdownlint": "^0.24.0",
     "markdownlint-cli": "^0.29.0",
     "node-watch": "^0.7.1",
