Masthead link for @jxtx -> foundation

--- a/content/elixir-it/navbar.yml
+++ b/content/elixir-it/navbar.yml
@@ -53,4 +53,4 @@ right:
   - label: Branding
     target: "/images/galaxy-logos/"
 - label: "@jxtx"
-  target: "/jxtx/"
+  target: https://jxtxfoundation.org/
