--- a/config.json
+++ b/config.json
@@ -29,14 +29,14 @@
     "subsites": {
         "shorthands": {
             "all": [
-                "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu", "us", "global"
+                "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "au", "eu", "us", "global"
             ],
             "all-eu": [
                 "freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu"
             ]
         },
         "default": "global",
-        "navbar": ["global", "us", "eu", "freiburg", "erasmusmc", "belgium", "pasteur", "genouest", "elixir-it", "ifb"],
+        "navbar": ["global", "us", "eu", "au", "freiburg", "erasmusmc", "belgium", "pasteur", "genouest", "elixir-it", "ifb"],
         "all": {
             "global": {
                 "name": "Global",
@@ -82,6 +82,11 @@
                 "name": "EuroScienceGateway",
                 "gitter": "usegalaxy-eu/Lobby",
                 "custom": true
+            },
+            "au": {
+                "name": "Australia",
+                "gitter": "galaxyproject/Lobby",
+                "external": "https://site.usegalaxy.org.au"
             }
         }
     },
