--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "url": "https://github.com/galaxyproject/galaxy-hub.git"
   },
   "scripts": {
-    "build": "env NODE_OPTIONS=--openssl-legacy-provider src/build/run.mjs build",
+    "build": "src/build/run.mjs build",
     "links:internal": "src/build/check-links.mjs",
     "serve": "http-server ./dist/",
-    "develop": "env NODE_OPTIONS=--openssl-legacy-provider src/build/run.mjs develop",
+    "develop": "src/build/run.mjs develop",
     "preprocess": "src/build/preprocess.mjs preprocess",
     "format": "prettier --write '*.js' 'cypress/**/*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
     "format:check": "prettier --check '*.js' 'cypress/**/*.js' 'src/**/{*.js,*.mjs,*.scss,*.vue}' '!src/.temp/**'",
