--- a/content/eu/navbar.yml
+++ b/content/eu/navbar.yml
@@ -65,6 +65,6 @@ right:
   - label: VGP
     target: "/projects/vgp/"
   - label: Microbial
-    target: "projects/microbial/"
+    target: "/projects/microbial/"
 - label: "@jxtx"
   target: https://jxtxfoundation.org/
