Remove bipaa and genouest servers (closing, migrating to usegalaxy.fr)

--- a/config.json
+++ b/config.json
@@ -34,7 +34,6 @@
                 "pasteur",
                 "belgium",
                 "ifb",
-                "genouest",
                 "erasmusmc",
                 "elixir-it",
                 "au",
@@ -42,7 +41,7 @@
                 "us",
                 "global"
             ],
-            "all-eu": ["freiburg", "pasteur", "belgium", "ifb", "genouest", "erasmusmc", "elixir-it", "eu"]
+            "all-eu": ["freiburg", "pasteur", "belgium", "ifb", "erasmusmc", "elixir-it", "eu"]
         },
         "default": "global",
         "navbar": [
@@ -54,7 +53,6 @@
             "erasmusmc",
             "belgium",
             "pasteur",
-            "genouest",
             "elixir-it",
             "ifb"
         ],
@@ -85,10 +83,6 @@
             },
             "pasteur": {
                 "name": "Pasteur",
-                "gitter": "usegalaxy-eu/Lobby"
-            },
-            "genouest": {
-                "name": "GenOuest",
                 "gitter": "usegalaxy-eu/Lobby"
             },
             "elixir-it": {
